--- a/index.html
+++ b/index.html
@@ -21,9 +21,81 @@
     <div class="container">
       <!-- Timeblocks go here -->
 
-      <!-- 9AM -->
+      <!-- 09:00 -->
       <div id="hour-9" class="row time-block">
-        <div class="col-md-1 hour">9AM</div>
+        <div class="col-md-1 hour">09:00</div>
+
+        <textarea class="col-md-10 description"></textarea>
+
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <!-- 10:00 -->
+      <div id="hour-10" class="row time-block">
+        <div class="col-md-1 hour">10:00</div>
+
+        <textarea class="col-md-10 description"></textarea>
+
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <!-- 11:00 -->
+      <div id="hour-11" class="row time-block">
+        <div class="col-md-1 hour">11:00</div>
+
+        <textarea class="col-md-10 description"></textarea>
+
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <!-- 12:00 -->
+      <div id="hour-12" class="row time-block">
+        <div class="col-md-1 hour">12:00</div>
+
+        <textarea class="col-md-10 description"></textarea>
+
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <!-- 13:00 -->
+      <div id="hour-13" class="row time-block">
+        <div class="col-md-1 hour">13:00</div>
+
+        <textarea class="col-md-10 description"></textarea>
+
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <!-- 14:00 -->
+      <div id="hour-14" class="row time-block">
+        <div class="col-md-1 hour">14:00</div>
+
+        <textarea class="col-md-10 description"></textarea>
+
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <!-- 15:00 -->
+      <div id="hour-15" class="row time-block">
+        <div class="col-md-1 hour">15:00</div>
+
+        <textarea class="col-md-10 description"></textarea>
+
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <!-- 16:00 -->
+      <div id="hour-16" class="row time-block">
+        <div class="col-md-1 hour">16:00</div>
+
+        <textarea class="col-md-10 description"></textarea>
+
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <!-- 17:00 -->
+      <div id="hour-17" class="row time-block">
+        <div class="col-md-1 hour">17:00</div>
 
         <textarea class="col-md-10 description"></textarea>
 
